# sycl_interoperate_build_option

./: README.md  cmp_2_fn.py  cvt.py
ocl_pipeline_rope_kernel/: CMakeLists.txt  README.md  run.sh  run_vtune.sh
ocl_pipeline_rope_kernel/src/: load_dump_data.cpp  main.cpp
ocl_pipeline_sdpa_kernel/: CMakeLists.txt  run.sh  run_vtune.sh
ocl_pipeline_sdpa_kernel/src/: main.cpp  private.hpp
onednn_kernel/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  vtune.sh
onednn_kernel/onednn_ocl/: CMakeLists.txt  README.md  main.cpp  run.sh  run_vtune.sh
onednn_kernel/onednn_sycl/: CMakeLists.txt  README.md  main.cpp  run.sh  run_vtune.sh
sycl_pipeline_rope_kernel/: CMakeLists.txt  README.md  run.sh  run_vtune.sh
sycl_pipeline_rope_kernel/src/: load_dump_data.cpp  luanch_kernel_levelzero_ocloc.cpp  main.cpp  private.hpp  sycl_levelzero_backend_rope_ref.cpp  ze_api_wrap.hpp
sycl_pipeline_rope_kernel/src/kernel_rope_ref/: SYCL_LZ_program_1_bucket_0_part_53_8491392767821923070.cl  SYCL_LZ_program_1_bucket_0_part_53_8491392767821923070_print_result.cl  clean.cl  program1_network1_0_rope___module.model.layers.0.self_attn_aten__add_Add_dst0.txt  program1_network1_0_rope___module.model.layers.0.self_attn_aten__add_Add_dst0_master.txt  program1_network1_0_rope___module.model.layers.0.self_attn_aten__add_Add_src0.txt  program1_network1_0_rope___module.model.layers.0.self_attn_aten__add_Add_src1.txt  program1_network1_0_rope___module.model.layers.0.self_attn_aten__add_Add_src2.txt
sycl_pipeline_sdpa_kernel/: CMakeLists.txt  run.sh  run_vtune.sh
sycl_pipeline_sdpa_kernel/src/: load_dump_data.cpp  main.cpp  private.hpp
sycl_pipeline_sdpa_kernel/src/kernel_sdpa/: SYCL_LZ_program_1_bucket_0_part_67_8198298808319190670.cl  program1_network1_0_indirectsdpa___module.model.layers.0.self_attn_aten__scaled_dot_product_attention_ScaledDotProductAttention_src4.txt
sycl_pipeline_sdpa_kernel/src/kernel_sdpa_micro/: sdpa_micro_prefill_8660372428234100028_0_0__sa.cl
